<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">FBReader</string>
	<string name="empty_string"></string>
	 <string name="afc_lib_name">android-filechooser</string>
    <string name="afc_cmd_advanced_selection_all">All</string>
    <string name="afc_cmd_advanced_selection_invert">Invert selection</string>
    <string name="afc_cmd_advanced_selection_none">None</string>
    <string name="afc_cmd_clear">Clear</string>
    <string name="afc_cmd_grid_view">Grid view</string>
    <string name="afc_cmd_home">Home</string>
    <string name="afc_cmd_list_view">List view</string>
    <string name="afc_cmd_new_folder">New folder…</string>
    <string name="afc_cmd_reload">Reload</string>
    <string name="afc_cmd_remove_from_list">Remove from list</string>
    <string name="afc_cmd_select_all_files">Select all files</string>
    <string name="afc_cmd_select_all_folders">Select all folders</string>
    <string name="afc_cmd_sort">Sort…</string>
    <string name="afc_ellipsize">…</string>
    <string name="afc_file">file</string>
    <string name="afc_folder">folder</string>
    <string name="afc_hint_double_tap_to_select_file">Double tap to select file/ folder</string>
    <string name="afc_hint_folder_name">folder name</string>
    <string name="afc_hint_save_as_filename">filename</string>
    <string name="afc_msg_app_doesnot_have_permission_to_create_files">This application does not have permission to create files/ folders</string>
    <string name="afc_msg_app_doesnot_have_permission_to_delete_files">This application does not have permission to delete files/ folders</string>
    <string name="afc_msg_cancelled">Cancelled</string>
    <string name="afc_msg_cannot_connect_to_file_provider_service">Can not connect to file provider service</string>
    <string name="afc_msg_done">Done</string>
    <string name="afc_msg_empty">…empty</string>
    <string name="afc_msg_filename_is_empty">Filename is empty</string>
    <string name="afc_msg_loading">Loading…</string>
    <string name="afc_pmsg_cannot_access_dir">Can not access \"%1$s\"</string>
    <string name="afc_pmsg_cannot_create_folder">Can not create folder \"%1$s\"</string>
    <string name="afc_pmsg_cannot_delete_file">Can not delete %1$s \"%2$s\"</string>
    <string name="afc_pmsg_confirm_delete_file">Are you sure you want to delete this %1$s \"%2$s\"?</string>
    <string name="afc_pmsg_confirm_replace_file">This file \"%1$s\" already exists.\n\nDo you want to replace it?</string>
    <string name="afc_pmsg_deleting_file">Deleting %1$s \"%2$s\"…</string>
    <string name="afc_pmsg_file_has_been_deleted">…%1$s \"%2$s\" has been deleted</string>
    <string name="afc_pmsg_filename_is_directory">\"%1$s\" is a folder</string>
    <string name="afc_pmsg_filename_is_invalid">File name \"%1$s\" is invalid</string>
    <string name="afc_pmsg_max_file_count_allowed">…has more files, max allowed: %1$,d</string>
    <string name="afc_pmsg_unknown_error">Unknown error: %1$s</string>
    <string name="afc_pmsg_xxx_items">%1$,d items</string>
    <string name="afc_root">Root</string>
    <string name="afc_title_advanced_selection">Select…</string>
    <string name="afc_title_alert">Alert</string>
    <string name="afc_title_choose_directories">Choose folders…</string>
    <string name="afc_title_choose_files">Choose files…</string>
    <string name="afc_title_choose_files_and_directories">Choose files/ folders…</string>
    <string name="afc_title_confirmation">Confirmation</string>
    <string name="afc_title_date">Date</string>
    <string name="afc_title_error">Error</string>
    <string name="afc_title_history">History</string>
    <string name="afc_title_info">Info</string>
    <string name="afc_title_name">Name</string>
    <string name="afc_title_save_as">Save as…</string>
    <string name="afc_title_size">Size</string>
    <string name="afc_title_sort_by">Sort by…</string>
    <string name="afc_yesterday">Yesterday</string>
    <string name="afc_msg_app_cant_create_folder">Can\'t create folder in this directory</string>
    <string name="afc_msg_app_cant_choose_folder">Can\'t choose this folder</string>

    <string name="accept">接受</string>
    <string name="cancel">取消</string>
    <string name="cannot_open_buffer">无法打开缓冲器</string>
    <string name="cannot_open_document">无法打开文档</string>
    <string name="cannot_open_document_Reason">无法打开文档： %1$s</string>
    <string name="cannot_open_file_Path">无法打开文件：%1$s</string>
    <string name="choose_value">选择值</string>
    <string name="copied_to_clipboard">已复制到剪贴板</string>
    <string name="copy">复制</string>
    <string name="copy_text">复制文本</string>
    <string name="copy_text_to_the_clipboard">将文本复制到剪贴板</string>
    <string name="delete">删除</string>
    <string name="dismiss">解除</string>
    <string name="document_has_changes_save_them_">文档已变更，保存变更吗？</string>
    <string name="draw_annotation">作批注</string>
    <string name="edit_annotations">编辑批注</string>
    <string name="enter_password">输入密码</string>
    <string name="entering_reflow_mode">输入重排模式</string>
    <string name="fill_out_text_field">填充文本字段</string>
    <string name="format_currently_not_supported">当前不支持此格式</string>
    <string name="highlight">高亮</string>
    <string name="ink">墨迹</string>
    <string name="leaving_reflow_mode">正在离开重排模式</string>
    <string name="more">更多</string>
    <string name="no">否</string>
    <string name="no_further_occurrences_found">未发现更多实例。</string>
    <string name="no_media_hint">存储介质在设备和 PC 上共同使用，会导致该存储介质在设备上无法被访问</string>
    <string name="no_media_warning">没有存储介质</string>
    <string name="no_text_selected">未选择文本</string>
    <string name="not_supported">不被支持</string>
    <string name="nothing_to_save">没有要保存的内容</string>
    <string name="okay">确定</string>
    <string name="outline_title">目录</string>
    <string name="parent_directory">[向上一级]</string>
    <string name="picker_title_App_Ver_Dir">%1$s%2$s:%3$s</string>
    <string name="print">打印</string>
    <string name="print_failed">未能打印</string>
    <string name="save">保存</string>
    <string name="search">搜索</string>
    <string name="search_backwards">向后搜索</string>
    <string name="search_document">搜索文档</string>
    <string name="search_forwards">向前搜索</string>
    <string name="searching_">正在搜索…</string>
    <string name="select">选择</string>
    <string name="select_text">选择文本</string>
    <string name="strike_out">删除线</string>
    <string name="text_not_found">未发现文本</string>
    <string name="toggle_links">高亮并启用墨迹</string>
    <string name="underline">下划线</string>
    <string name="yes">是</string>
    <string name="shuqianlist">书签列表</string>
</resources>
